--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -99,7 +99,7 @@
                 that positively impact the world around us.
             </p>
             <p class="fs-6" data-aos="fade-down" data-aos-delay="450">
-                Want to know a little more about me? Feel free to <span class="colored-text">contact</span> me :
+                Want to know a little more about me or you have something in mind? Feel free to <span class="colored-text">contact</span> me :
             </p>
             <div class="d-flex flex-wrap flex-row gap-2">
 
