--- a/src/app/components/quote/quote.component.html
+++ b/src/app/components/quote/quote.component.html
@@ -2,13 +2,13 @@
     <div class="content-quote d-flex flex-column justify-content-center align-items-center gap-3 border border-dark p-3"
         style="max-width: 700px;">
         <p class="fs-6 align-self-start">
-            < minimalist-quote>
+            &#60;minimalist-quote&#62;
         </p>
         <p class="fs-4 fw-bold text-center">
             {{quoteMessage}}
         </p>
         <p class="fs-6 align-self-end">
-            < /minimalist-quote>
+            &#60;/minimalist-quote&#62;
         </p>
     </div>
 </div>
