--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -3,19 +3,21 @@
         <p class="display-4 fw-bold">Projects</p>
         <div class="row g-0 d-flex justify-content-center">
             <p class="col-sm-12 fs-6 m-0">
-                Here are some of my projects that I have worked on over these last years.
+                Here are some projects that I have worked on over these last years.
             </p>
         </div>
     </div>
     <div class="d-flex flex-wrap gx-0 justify-content-center w-100 mt-3">
-        <div class="col-md-11" *ngFor="let project of allProjects">
+        <div class="col-md-11 mt-3" *ngFor="let project of allProjects">
             <app-card-project [currentProject]="project"></app-card-project>
         </div>
-        <!-- <div class="col-md-11 mt-3">
-            <app-card-project carouselId="2"></app-card-project>
+    </div>
+    <div class="col-sm-12 text-center fw-bold fs-3 mt-5 mb-3">
+        Other Noteworthy Projects
+    </div>
+    <div class="row g-0 justify-content-center">
+        <div class="col-xl-3 col-lg-5 col-md-5 col-sm-10 col-11 m-3 py-3 px-3 side-card" *ngFor="let project of allSideProjects">
+            <app-side-project [currentProject]="project"></app-side-project>
         </div>
-        <div class="col-md-11 mt-3">
-            <app-card-project carouselId="3"></app-card-project>
-        </div> -->
     </div>
 </div>
