--- a/src/app/components/projects/card-project/card-project.component.html
+++ b/src/app/components/projects/card-project/card-project.component.html
@@ -31,7 +31,7 @@
                 <div *ngFor="let item of currentProject.images_app; let i = index"
                     class="carousel-item {{item.split(';')[0]}}">
                     <div class="d-flex justify-content-center p-3" style="height: 300px">
-                        <img src="{{item.split(';')[1]}}" class="d-block " alt="...">
+                        <img src="{{item.split(';')[1]}}" class="d-block h-100" alt="...">
                     </div>
                     <!-- </div> -->
                     <!-- 
