Remove non-essential files

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -99,7 +99,7 @@
                 that positively impact the world around us.
             </p>
             <p class="fs-6" data-aos="fade-down" data-aos-delay="450">
-                Want to know a little more about me or you have something in mind? Feel free to <span class="colored-text">contact</span> me :
+                Want to know a little more about me or have something in mind? Feel free to <span class="colored-text">contact</span> me.
             </p>
             <div class="d-flex flex-wrap flex-row gap-2">
 
@@ -111,7 +111,7 @@
                 <div class="d-flex align-items-center">
                     <img src="assets/icons/linked.png" height="27px" width="27px">
                     <a href="https://www.linkedin.com/in/med-li-jr/" target="_blank"
-                        class="text-dark text-decoration-none ms-2">Med Li Jr</a>
+                        class="outlink text-dark text-decoration-none ms-2">Med Li Jr</a>
                 </div>
             </div>
         </div>
