--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,16 +15,16 @@
         <div class="home-link d-flex justify-content-center align-items-center">
             <img src="assets/icons/linked.png" height="35px" width="35px">
             <a href="https://www.linkedin.com/in/medli-jr/" target="_blank"
-            class="text-dark text-decoration-none ms-2 fs-5">Med Li Jr</a>
+            class="outlink text-dark text-decoration-none ms-2 fs-5">Med Li Jr</a>
         </div>
         <div class="home-link d-flex justify-content-center align-items-center">
             <img src="assets/icons/github.png" height="35px" width="35px">
             <a href="https://github.com/Med-Li-Jr" target="_blank"
-            class="text-dark text-decoration-none ms-2 fs-5">Med-Li-Jr</a>
+            class="outlink text-dark text-decoration-none ms-2 fs-5">Med-Li-Jr</a>
         </div>
     </div>
     <div class="mt-3 d-flex align-items-center">
-        <a href="assets/icons/Mohamed_Lawani_vEN.pdf" target="_blank" class="btn btn-resume fw-bold">See
+        <a href="https://raw.githubusercontent.com/Med-Li-Jr/images_demo/main/portfolio/Mohamed_Lawani_vEN.pdf" target="_blank" class="btn btn-resume fw-bold">See
             Resume</a>
     </div>
 
