--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -12,7 +12,7 @@
             <app-card-project [currentProject]="project"></app-card-project>
         </div>
     </div>
-    <div class="col-sm-12 text-center fw-bold fs-3 mt-5 mb-3">
+    <div class="col-sm-12 text-center fw-bold fs-3 my-4">
         Other Noteworthy Projects
     </div>
     <div class="row g-0 justify-content-center">
