--- a/src/app/components/projects/card-project/card-project.component.html
+++ b/src/app/components/projects/card-project/card-project.component.html
@@ -1,5 +1,5 @@
 <div class="row g-0 p-3 justify-content-center align-items-center">
-    <div class="col-lg-6 col-md-10 col-sm-10 p-2 border border-dark" style="background-color: #f9f9f9;">
+    <div class="col-lg-6 col-md-10 col-sm-10 p-2" style="background-color: #f9f9f9;">
 
         <div id="{{currentProject.carousel_name}}" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
@@ -13,7 +13,7 @@
                 <div *ngFor="let item of currentProject.images_app; let i = index"
                     class="carousel-item {{item.split(';')[0]}}">
                     <div class="d-flex justify-content-center p-3" style="height: 300px;">
-                        <img src="{{item.split(';')[1]}}" class="d-block" style="height: auto; max-width: 100%;" alt="...">
+                        <img src="{{item.split(';')[1]}}" class="d-block" style="height: 100%; width: 100%; object-fit: contain" alt="...">
                     </div>
                 </div>
             </div>
