--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -16,47 +16,47 @@
         <div class="col-md-12 ps-2 d-flex flex-wrap gap-3 justify-content-center align-items-center">
 
             <div
-                class="col-md-3 col-5 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
+                class="card-skills col-md-3 col-5 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
                 <img class="" src="assets/icons/flutter_framework.png" alt="" height="60px">
                 <p class="text-center fw-bolder m-0 mt-2">Flutter</p>
             </div>
             <div
-                class="col-md-3 col-5 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
+                class="card-skills col-md-3 col-5 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
                 <img class="" src="assets/icons/Android_Studio.png" alt="" height="60px">
                 <p class="text-center fw-bolder m-0 mt-2">Android Studio</p>
             </div>
             <div
-                class="col-md-3 col-5 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
+                class="card-skills col-md-3 col-5 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
                 <img class="" src="assets/icons/NativeScript.png" alt="" height="60px">
                 <p class="text-center fw-bolder m-0 mt-2">NativeScript</p>
             </div>
             <div
-                class="col-md-3 col-5 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
+                class="card-skills col-md-3 col-5 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
                 <img class="" src="assets/icons/angular_framework.png" alt="" height="60px">
                 <p class="text-center fw-bolder m-0 mt-2 ">Angular</p>
             </div>
             <div
-                class="col-md-3 col-5 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
+                class="card-skills col-md-3 col-5 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
                 <img class="" src="assets/icons/NET_Core_Logo.png" alt="" height="60px">
                 <p class="text-center fw-bolder m-0 mt-2">.Net Core</p>
             </div>
             <div
-                class="col-md-3 col-5 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
+                class="card-skills col-md-3 col-5 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
                 <img class="" src="assets/icons/Laravel.png" alt="" height="60px">
                 <p class="text-center fw-bolder m-0 mt-2">Laravel</p>
             </div>
             <div
-                class="col-md-3 col-5 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
+                class="card-skills col-md-3 col-5 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
                 <img class="" src="assets/icons/google-firebase.png" alt="" height="60px">
                 <p class="text-center fw-bolder m-0 mt-2">Firebase</p>
             </div>
             <div
-                class="col-md-3 col-5 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
+                class="card-skills col-md-3 col-5 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
                 <img class="" src="assets/icons/sql-server.png" alt="" height="60px">
                 <p class="text-center fw-bolder m-0 mt-2">Sql Server</p>
             </div>
             <div
-                class="col-md-3 col-5 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
+                class="card-skills col-md-3 col-5 border border-dark d-flex flex-column justify-content-center align-items-center p-2">
                 <img class="" src="assets/icons/MySQL.png" alt="" height="60px">
                 <p class="text-center fw-bolder m-0 mt-2">MySql</p>
             </div>
