--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div class="mt-3 d-flex align-items-center">
-        <a href="https://raw.githubusercontent.com/Med-Li-Jr/images_demo/main/portfolio/Mohamed_Lawani_vEN.pdf" target="_blank" class="btn btn-resume fw-bold">See
+        <a href="assets/icons/Mohamed_Lawani_vEN.pdf" target="_blank" class="btn btn-resume fw-bold">See
             Resume</a>
     </div>
 
