Last Update Prod

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,7 +14,7 @@
         </div>
         <div class="home-link d-flex justify-content-center align-items-center">
             <img src="assets/icons/linked.png" height="35px" width="35px">
-            <a href="https://www.linkedin.com/in/medli-jr/" target="_blank"
+            <a href="https://www.linkedin.com/in/MedLiJr/" target="_blank"
             class="outlink text-dark text-decoration-none ms-2 fs-5">Med Li Jr</a>
         </div>
         <div class="home-link d-flex justify-content-center align-items-center">
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div class="mt-3 d-flex align-items-center">
-        <a href="assets/icons/Mohamed_Lawani_vEN.pdf" target="_blank" class="btn btn-resume fw-bold">See
+        <a href="https://raw.githubusercontent.com/Med-Li-Jr/images_demo/main/portfolio/Med_Li_Jr_vEN_Resume.pdf" target="_blank" class="btn btn-resume fw-bold">See
             Resume</a>
     </div>
 
