--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -110,7 +110,7 @@
 
                 <div class="d-flex align-items-center">
                     <img src="assets/icons/linked.png" height="27px" width="27px">
-                    <a href="https://www.linkedin.com/in/med-li-jr/" target="_blank"
+                    <a href="https://www.linkedin.com/in/MedLiJr/" target="_blank"
                         class="outlink text-dark text-decoration-none ms-2">Med Li Jr</a>
                 </div>
             </div>
