Update & Add Project 'Spofity App'

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -99,19 +99,19 @@
                 that positively impact the world around us.
             </p>
             <p class="fs-6" data-aos="fade-down" data-aos-delay="450">
-                Want to know a little more about me or have something in mind? Feel free to <span class="colored-text">contact</span> me.
+                Want to know a little more about me or have something in mind? Feel free to <span class="colored-text">contact me</span>.
             </p>
             <div class="d-flex flex-wrap flex-row gap-2">
 
                 <div class="d-flex align-items-center">
                     <img src="assets/icons/mail.png" height="27px" width="27px">
-                    <span class="ms-2">MedLawani.Jr@gmail.com</span>
+                    <span class="ms-2">{{coordInfo.email}}</span>
                 </div>
 
                 <div class="d-flex align-items-center">
                     <img src="assets/icons/linked.png" height="27px" width="27px">
-                    <a href="https://www.linkedin.com/in/MedLiJr/" target="_blank"
-                        class="outlink text-dark text-decoration-none ms-2">Med Li Jr</a>
+                    <a href="{{coordInfo.linkedInUrl}}" target="_blank"
+                        class="outlink text-dark text-decoration-none ms-2">{{coordInfo.linkedInName}}</a>
                 </div>
             </div>
         </div>
