--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,21 +10,21 @@
         
         <div class="home-link d-flex justify-content-center align-items-center">
             <img src="assets/icons/mail.png" height="35px" width="35px">
-            <span class="ms-2 fs-5">MedLawani.Jr@gmail.com</span>
+            <span class="ms-2 fs-5">{{coordInfo.email}}</span>
         </div>
         <div class="home-link d-flex justify-content-center align-items-center">
             <img src="assets/icons/linked.png" height="35px" width="35px">
-            <a href="https://www.linkedin.com/in/MedLiJr/" target="_blank"
-            class="outlink text-dark text-decoration-none ms-2 fs-5">Med Li Jr</a>
+            <a href="{{coordInfo.linkedInUrl}}" target="_blank"
+            class="outlink text-dark text-decoration-none ms-2 fs-5">{{coordInfo.linkedInName}}</a>
         </div>
         <div class="home-link d-flex justify-content-center align-items-center">
             <img src="assets/icons/github.png" height="35px" width="35px">
-            <a href="https://github.com/Med-Li-Jr" target="_blank"
-            class="outlink text-dark text-decoration-none ms-2 fs-5">Med-Li-Jr</a>
+            <a href="{{coordInfo.githubUrl}}" target="_blank"
+            class="outlink text-dark text-decoration-none ms-2 fs-5">{{coordInfo.githubName}}</a>
         </div>
     </div>
     <div class="mt-3 d-flex align-items-center">
-        <a href="https://github.com/Med-Li-Jr/images_demo/raw/main/portfolio/Med_Lawani_Jr-vEN.pdf" target="_blank" class="btn btn-resume fw-bold">See
+        <a href="{{coordInfo.resumeUrl}}" target="_blank" class="btn btn-resume fw-bold">See
             Resume</a>
     </div>
 
